src/main/resources/static/css/style.css
html,body
{
    width: 100%;
    margin: 0px;
    padding: 0px;
    overflow-x: hidden; 
}


#fixed-left{
	display: block;
}
#fixed-left .text-help{
    transform: rotate(-90deg)translate(50%, -100%);
    transform-origin: 100% 50%;
    right: -16px;
    top: 50%;
    margin-top: -20px;
    bottom: auto;
    animation: feedbackSlideLeft .2s linear;
    z-index: 2147483644;
    position: fixed;
    width: auto;
    line-height: 25px;
    padding: 0 8px;
    margin: 0;
    font-family: 'Ubuntu', sans-serif;
    font-size: 3vw;
}


.bs-txt{
	font-family: 'Stick', sans-serif;
	color:white !important;
	font-size: 3.25rem !important;
	text-shadow: 3px 3px 0px rgb(0 0 0);
	margin-right: 0.25rem !important;
}

.navbar{
	background-image: url("/img/titlebg.jpeg");
	height: 100px;
	background-position: center;
	background-size: cover;
}
.nav_c{
	background-color:#F6F6F6;
	border-bottom-right-radius:1.25rem !important;
	border-bottom-left-radius:1.25rem !important;
}

.todayM{
	box-shadow: -1px 1px 3px 0px #888888;
	background-color:#F6F6F6;
	margin-bottom:15px;
	border-bottom-right-radius:1.25rem !important;
	border-bottom-left-radius:1.25rem !important;
	padding:7px 0;
	font-family: 'Ubuntu', sans-serif;
	font-weight:900;
	color:#383838;
}
.td-txt{
	margin-bottom:0 !important;
}
.td{
	padding:10px;
}
.td-container{
	width:auto !important;
}
.td-item{
	width:80%;
	height: auto;
	background-color:#fff;
	margin:0 10%;
}

.cat-container-overall{
	padding-right: var(--bs-gutter-x,0.08rem) !important;
	padding-left:0 !important;
}

.category_container{
	margin-bottom:100px;

}
.categories{
	border-radius:1.25rem !important;
	background-color:#F6F6F6;
	margin: 10px 5px;
	box-shadow: 0px 2px 3px 0px #888888;
}
.list-group-item{
	border:none !important;
	background-color: #f6f6f6 !important;
}
.category_iteam{
	margin-bottom:20px;
}
.accordion-flush .accordion-button {
	border:none;
}

.accordion-body{
	padding: 1rem 0.4rem !important;
}
.accordion-button {
	display: block !important;
}
.cat_item_img{
	width:100%;
	height: auto;
	background-color:#fff;
}
.h3{
	display:block;
}
.item-price{
	padding:5px !important;
}
.item_counter{
	padding:2px !important;
	display: inline-flex !important;
}
.price{
	padding: .5rem 0.5rem !important;
}
.item_img{
	padding:2px !important;
}
.item_text_container{
	padding:5px !important;
	padding-left:8px !important;
}
.item_text{
	font-size:0.7rem !important;
	text-align: justify;
  text-justify: inter-word;
}
.form-control{
	width:50% !important;
	margin:0 !important;
}


/*
.total-ft{
	position:fixed;
    bottom: 0;
    width: 100%;
	right:0;
	border-top: 2px solid #0000007a !important;	
	font-family: 'Ubuntu', sans-serif;
}
*/

.total-ft{
	color: #198754 !important;
    background-color: #ffffff !important;
    position: fixed;
    bottom: 0;
    width: 95%;
    /* right: 0; */
    border-top: 3px solid #000000f0 !important;
    font-family: 'Ubuntu', sans-serif;
    border-bottom: 3px solid #000000f0 !important;
    margin: 0px 9px;
}

